[package]
name = "observing-taxonomy-gbif"
version = "0.1.0"
edition = "2021"
description = "GBIF-backed TaxonomyUpstream impl for observing-db's resolver"
license = "MIT OR Apache-2.0"

[dependencies]
gbif = "0.1"
observing-db = { path = "../observing-db" }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
