[package]
name = "observing-taxonomy"
version = "0.1.0"
edition = "2021"
description = "Taxonomy resolver service for Observ.ing - integrates with GBIF API"
license = "MIT OR Apache-2.0"

[dependencies]
# GBIF API client
gbif-api = { path = "../gbif-api" }

# Wikidata SPARQL client
wikidata-client = { path = "../wikidata-client" }

# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
tower-http = { workspace = true }

# HTTP client (still needed for error type re-export)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-stackdriver = { workspace = true }

# Time
chrono = { workspace = true }

# Caching
moka = { workspace = true }


# Async utilities
futures = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[[bin]]
name = "observing-taxonomy"
path = "src/main.rs"
