[package]
name = "observing-taxonomy"
version = "0.1.0"
edition = "2021"
description = "Taxonomy resolver service for Observ.ing - integrates with GBIF API"
license = "MIT OR Apache-2.0"

[dependencies]
# GBIF API client
gbif-api = { path = "../gbif-api" }

# iNaturalist API client (secondary taxa source for clades like Angiospermae)
inaturalist = "0.9.0"

# `inaturalist` pulls in reqwest 0.12 with default-features=false and no TLS,
# so its default Client fails on HTTPS ("scheme is not http"). Aliased here
# purely to unify features — cargo merges feature sets across direct+transitive
# deps, so adding rustls-tls via this alias enables it on the shared 0.12
# instance that `inaturalist` already uses. Not referenced in code.
reqwest_0_12_tls_enabler = { package = "reqwest", version = "0.12", default-features = false, features = ["rustls-tls"] }

# Wikidata SPARQL client
wikidata-client = { path = "../wikidata-client" }

# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
tower-http = { workspace = true }

# HTTP client (still needed for error type re-export)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-stackdriver = { workspace = true }

# Time
chrono = { workspace = true }

# Caching
moka = { workspace = true }


# Async utilities
futures = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[[bin]]
name = "observing-taxonomy"
path = "src/main.rs"
